--- a/s/site.css
+++ b/s/site.css
@@ -102,7 +102,7 @@ footer .footer-content {
 }
 
 .footer-logos img {
-    height: 255px;
+    height: 336px;
     width: auto;
 }
 
@@ -616,9 +616,12 @@ select.error {
         max-width: 100%;
     }
 
+    section.split > div:first-child > div:first-child,
+    section.split > div:first-child .button-row,
     section.split > div:last-child > * {
-      margin-left: auto;
-      margin-right: 34px;
+        margin-left: 0;
+        margin-right: 0;
+        max-width: 100%;
     }
 
     section.split h2 {
