--- a/s/site.css
+++ b/s/site.css
@@ -553,6 +553,29 @@ select.error {
     font-weight: 500;
 }
 
+.form-message {
+    margin-top: 13px;
+    padding: 13px;
+    border-radius: 5px;
+    font-size: 15px;
+    white-space: pre-line;
+}
+
+.form-message.loading {
+    background-color: #e3f2fd;
+    color: #1565c0;
+}
+
+.form-message.success {
+    background-color: #e8f5e9;
+    color: #2e7d32;
+}
+
+.form-message.error {
+    background-color: #ffebee;
+    color: #c62828;
+}
+
 @media (max-width: 900px) {
     header {
         flex-direction: column;
